JumpScript/tests/baselines/reference/parserErrorRecovery_ObjectLiteral3.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral3.jump(2,1): error TS1109: Expression expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral3.jump(2,7): error TS1005: ':' expected.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral3.jump(2,8): error TS1005: '}' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ObjectLiterals/parserErrorRecovery_ObjectLiteral3.jump (3 errors) ====
    var v = { a: 
    return;
    ~~~~~~
!!! error TS1109: Expression expected.
          ~
!!! error TS1005: ':' expected.
           
!!! error TS1005: '}' expected.